--- a/package.json
+++ b/package.json
@@ -11,15 +11,23 @@
   },
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
+    "@reduxjs/toolkit": "^2.8.2",
     "canvas-confetti": "^1.9.3",
+    "formik": "^2.4.6",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "normalize.css": "^8.0.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
-    "swiper": "^11.2.10"
+    "react-redux": "^9.2.0",
+    "swiper": "^11.2.10",
+    "toaster": "^0.1.2",
+    "yap": "^0.0.2",
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -29,6 +37,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "prettier": "^3.6.2",
     "typescript": "^5"
   }
