--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "build": "next build --no-lint",
     "start": "next start",
     "lint": "eslint",
     "format": "prettier --write ."
@@ -25,7 +25,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "swiper": "^11.2.10",
-    "toaster": "^0.1.2", 
+    "toaster": "^0.1.2",
     "yup": "^1.7.0"
   },
   "devDependencies": {
