--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "canvas-confetti": "^1.9.3",
     "formik": "^2.4.6",
     "lucide-react": "^0.542.0",
+    "motion": "^12.23.12",
     "next": "15.5.2",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
