--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fullcalendar/react": "^6.1.19",
     "@react-icons/all-files": "^4.1.0",
     "@reduxjs/toolkit": "^2.8.2",
+    "axios": "^1.12.2",
     "canvas-confetti": "^1.9.3",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
@@ -28,6 +29,7 @@
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-paginate": "^8.3.0",
     "react-redux": "^9.2.0",
     "swiper": "^11.2.10",
     "toaster": "^0.1.2",
